force-app/main/default/objects/Training__c/Training__c.object-meta.xml
<CustomObject>
    <label>הכשרה</label>
    <nameField>
        <displayFormat>T-{000000000}</displayFormat>
        <label>מזהה הכשרה</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>הכשרות</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>