force-app/main/default/objects/Training__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ארגון מכשיר</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>הכשרות</relationshipLabel>
    <relationshipName>Training</relationshipName>
    <type>Lookup</type>
</CustomField>