force-app/main/default/objects/Training__c/fields/Actual_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date__c</fullName>
    <label>תאריך התחלת הכשרה בפועל</label>
    <type>Date</type>
</CustomField>