force-app/main/default/objects/Training__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>כתובת מיקום קיום ההכשרה</label>
    <length>100</length>
    <type>Text</type>
</CustomField>