force-app/main/default/objects/Training__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>יישוב</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>הכשרות</relationshipLabel>
    <relationshipName>City_Training</relationshipName>
    <type>Lookup</type>
</CustomField>