force-app/main/default/objects/Training__c/fields/College_Name__c.field-meta.xml
<CustomField>
    <fullName>College_Name__c</fullName>
    <label>שם מכללה</label>
    <length>50</length>
    <type>Text</type>
</CustomField>