force-app/main/default/objects/Training__c/fields/Course_id__c.field-meta.xml
<CustomField>
    <fullName>Course_id__c</fullName>
    <label>מספר מזהה</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>