force-app/main/default/objects/Training__c/fields/End_date__c.field-meta.xml
<CustomField>
    <fullName>End_date__c</fullName>
    <label>תאריך סיום ההכשרה</label>
    <type>Date</type>
</CustomField>