force-app/main/default/objects/Training__c/fields/Establishment_Date__c.field-meta.xml
<CustomField>
    <fullName>Establishment_Date__c</fullName>
    <label>תאריך הקמה של הקורס</label>
    <type>Date</type>
</CustomField>