force-app/main/default/objects/Training__c/fields/New_Profession__c.field-meta.xml
<CustomField>
    <fullName>New_Profession__c</fullName>
    <defaultValue>false</defaultValue>
    <label>מגמה חדשה</label>
    <type>Checkbox</type>
</CustomField>