force-app/main/default/objects/Training__c/fields/Operator_Training_ID__c.field-meta.xml
<CustomField>
    <fullName>Operator_Training_ID__c</fullName>
    <label>מזהה הכשרה מהמפעיל</label>
    <length>20</length>
    <type>Text</type>
</CustomField>