force-app/main/default/objects/Training__c/fields/Professin_Course__c.field-meta.xml
<CustomField>
    <fullName>Professin_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מגמה</label>
    <referenceTo>ProfessionCourse__c</referenceTo>
    <relationshipLabel>הכשרות</relationshipLabel>
    <relationshipName>Professin_Course</relationshipName>
    <type>Lookup</type>
</CustomField>