force-app/main/default/objects/Training__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>סטטוס</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>גיוס תלמידים</fullName>
            </value>
            <value>
                <fullName>נפתח</fullName>
            </value>
            <value>
                <fullName>בוטל</fullName>
            </value>
            <value>
                <fullName>הוקפא</fullName>
            </value>
            <value>
                <fullName>הסתיים</fullName>
            </value>
            <value>
                <fullName>ערך 1</fullName>
                <isActive>false</isActive>
                <label>ערך 1</label>
            </value>
            <value>
                <fullName>ערך 2</fullName>
                <isActive>false</isActive>
                <label>ערך 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>