force-app/main/default/objects/Training__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>רחוב</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Street__c.City__c</field>
            <operation>equals</operation>
            <valueField>$Source.City__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Street__c</referenceTo>
    <relationshipLabel>הכשרות</relationshipLabel>
    <relationshipName>Training</relationshipName>
    <type>Lookup</type>
</CustomField>