force-app/main/default/objects/Training__c/fields/Studentes_Number__c.field-meta.xml
<CustomField>
    <fullName>Studentes_Number__c</fullName>
    <label>כמות תלמידים</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>