force-app/main/default/objects/Training__c/fields/Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_Name__c</fullName>
    <label>שם רכז ההכשרה</label>
    <length>100</length>
    <type>Text</type>
</CustomField>