force-app/main/default/objects/Training__c/validationRules/Complete_Mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Complete_Mandatory_Fields</fullName>
    <active>true</active>
    <description>יש לבדוק שנשמרו השדות – שם הכשרה, מזהה קורס, מגמה או תיאור מגמה חדשה (אחד מבין השניים)</description>
    <errorConditionFormula>Professin_Course__c =&quot;&quot;&amp;&amp; Profession__c =&quot;&quot;</errorConditionFormula>
    <errorMessage>בדוק את השדות הבאים: מגמה או תיאור מגמה חדשה (אחד מבין השניים)</errorMessage>
</ValidationRule>