force-app/main/default/objects/Training__c/validationRules/New_Profession_Checkbox.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Profession_Checkbox</fullName>
    <active>true</active>
    <description>יש לוודא סימון שדה מגמה חדשה, כששדה תיאור מגמה חדשה אינו ריק</description>
    <errorConditionFormula>Profession__c &lt;&gt; NULL &amp;&amp;  New_Profession__c = FALSE</errorConditionFormula>
    <errorDisplayField>New_Profession__c</errorDisplayField>
    <errorMessage>יש לסמן את התיבה מגמה חדשה</errorMessage>
</ValidationRule>