force-app/main/default/objects/Training__c/validationRules/No_Profession.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Profession</fullName>
    <active>true</active>
    <description>אם סומן צ&apos;קבוקס מגמה חדשה&apos; יש לוודא שמוזן ערך בשדה תיאור מגמה חדשה</description>
    <errorConditionFormula>New_Profession__c =TRUE &amp;&amp;   Profession__c =&quot;&quot;</errorConditionFormula>
    <errorDisplayField>Profession__c</errorDisplayField>
    <errorMessage>לא נבחרה מגמה, יש לתאר את המגמה החדשה</errorMessage>
</ValidationRule>