force-app/main/default/objects/Training__c/validationRules/Only_One_Profession.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_One_Profession</fullName>
    <active>true</active>
    <description>אם השדה מגמה חדשה מסומן, וגם יש ערך בשדה מגמה לא נאפשר שמירה</description>
    <errorConditionFormula>New_Profession__c =TRUE &amp;&amp;  Professin_Course__c  &lt;&gt; &quot;&quot;</errorConditionFormula>
    <errorMessage>יש לבחור מגמה אחת בלבד</errorMessage>
</ValidationRule>