force-app/main/default/objects/Training__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Professin_Course__c</columns>
    <columns>College_Name__c</columns>
    <columns>Training_Name__c</columns>
    <columns>Profession__c</columns>
    <columns>Supervisor_Name__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>