force-app/main/default/objects/Training__c/listViews/My_Training.listView-meta.xml
<ListView>
    <fullName>My_Training</fullName>
    <columns>NAME</columns>
    <columns>Operator_Training_ID__c</columns>
    <columns>Status__c</columns>
    <columns>College_Name__c</columns>
    <columns>City__c</columns>
    <columns>Professin_Course__c</columns>
    <columns>New_Profession__c</columns>
    <columns>Profession__c</columns>
    <filterScope>Mine</filterScope>
    <label>הכשרות בבעלותי</label>
</ListView>